; F* verification and extraction rules (generated in sibling Hello-gen/ dir)
(dynamic_include ../Hello-gen/dune.deps.inc)

; Build the Hello executable from extracted OCaml
(executable
  (name Hello)
  (libraries fstar.lib)
  (preprocess (pps ppx_deriving_yojson))
  (flags (:standard -w -8-9-11-26-27-32-33-39)))
